# shelfwright

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  GEMINI.md  README.md  alembic.ini  docker-compose.yml  mcp_tools.md  plan.md  pyproject.toml  schema.md  spec.md  test_efficacy.py
.agent/skills/project-memory/: SKILL.md
.agent/workflows/: test-e2e.md
.devcontainer/: devcontainer.json
.gemini/workflows/: test.md
.github/workflows/: deploy.yml  frontend.yml  lint.yml
alembic/: env.py
alembic/versions/: 30f1e46533e9_chat_transcript_store.py  48e3762d6c0c_phase6_3_schema_hardening.py  6c2cdc370222_baseline_pre_multi_user_schema.py  7b7b4d6ae6f6_bulk_import_tables.py  a1b2c3d4e5f6_library_links_availability.py  c4f81a2d9b6e_library_links_availability.py  c804d02d6fbb_multi_user_foundation.py  f871fd59415e_detected_duplicates.py
data/raw/: 20251130.csv.dvc  test_sample.csv
diagrams/: ingestion_creation.md
docs/: frontend-visual-qc.md  scout_refactor_plan.md  testing_strategy.md  use_cases.md  verification_tutorial.md
docs/project_notes/: bugs.md  decisions.md  issues.md  key_facts.md  security.md
docs/runbooks/: bulk-import-rollout.md  gcp-walking-skeleton.md  library-links-rollout.md  lift1-multi-user-rollout.md  lift2-stage4-rollout.md  phase6-3-schema-rollout.md  safari-auth-fix-rollout.md  shelfwright-launch.md
docs/superpowers/plans/: 2026-05-30-mesh-runtime-foundation.md  2026-05-31-end-to-end-recommendation.md  2026-05-31-explorer-web-discovery.md  2026-05-31-internal-retrieval-readiness.md  2026-05-31-pluggable-agent-backend.md  2026-06-01-enrichment-hardening.md  2026-06-02-claude-enrichment-scouts.md  2026-06-05-cli-chat.md  2026-06-05-conversation-tuning.md  2026-06-05-lift0-walking-skeleton.md  2026-06-05-security-hardening.md  2026-06-05-single-title-import.md  2026-06-06-lift1-multi-user.md  2026-06-09-lift2-stage1-backend-chat.md  2026-06-09-lift2-stage2-frontend-spa.md  2026-06-09-lift2-stage3-async-enrichment.md  2026-06-10-lift2-stage4-cleanups-rollout.md  2026-06-15-recommendation-novelty-and-reread-labels.md  2026-06-16-chat-activity-trail.md  2026-06-16-enrichment-visibility.md  2026-06-16-history-edit-delete.md  2026-06-17-dark-mode.md  2026-06-18-bulk-import.md  2026-06-22-genre-mood-tag-cleaning.md  2026-06-22-nav-tab-import-polish.md  2026-06-22-visual-identity-v2.md  2026-06-23-author-trope-cleanup.md  2026-06-23-fallback-trope-prune.md  2026-06-25-analysis-viz-upgrade.md  2026-06-25-library-links-availability.md  2026-06-26-safari-mobile-auth-fix.md  2026-06-26-word-cloud-improvements.md  2026-07-11-shelfwright-launch.md  2026-07-12-phase6-1-prod-hotfixes.md  2026-07-12-phase6-2a-quick-wins.md  2026-07-12-phase6-2b-async-sessions.md  2026-07-12-phase6-3a-integrity-code.md  2026-07-12-phase6-3b-schema-integrity.md  2026-07-18-history-format-edit.md  2026-07-19-picks-neutral-removal.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  qc.html  qc.tsx  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  index.theme.test.ts  main.tsx  theme.test.ts  theme.ts  vite-env.d.ts
frontend/src/api/: activityLabels.test.ts  client.ts  (+3 more)
infra/: 00-config.sh  01-project.sh  02-cloudsql.sh  03-db-user-secret.sh  04-registry-bucket.sh  05-iam-wif.sh  06-restore.sh  07-budget.sh  08-cloud-tasks.sh  09-prod-secrets.sh  get_firebase_token.py  verify_restore.py
packaging/pypi-stub/: README.md  pyproject.toml
packaging/pypi-stub/src/shelfwright/: __init__.py
scratch/: scraping_agent.py
scripts/: clean_catalog.py  clean_tags.py  fetch_library_directory.py  gen_trope_embedding_fixture.py  test_efficacy.py  trope_audit.py
src/agentic_librarian/: chat_recorder.py  cli.py  llm_retry.py
test/: conftest.py  example_use_case_test.py  test_cleaning.py  test_metadata_scout.py
test/data/: standard_books.json  trope_embeddings.json
test/integration/: constraint_helpers.py  seed_helpers.py  test_analysis_api.py  test_api_auth.py  test_api_history_db.py  test_api_import_status.py  test_api_works_db.py  test_availability_api.py  test_availability_service_cache.py  test_backend_contract.py  test_books_api.py  test_chat_api.py  test_check_availability_tool.py  test_claude_e2e.py  test_cli_chat_live.py  test_cli_invite.py  test_constraint_backstops.py  test_contributor_dedup.py  test_db_ingestion.py  test_db_session.py  test_dedup_backfill.py  test_enrich_tool.py  test_enrichment_sweep.py  test_etl_pipeline.py  test_fallback_prune.py  test_fallback_repair.py  test_flow1_etl_live.py  test_import_migration.py  test_import_worker.py  test_internal_complete_edition_api.py  test_internal_enrich_api.py  test_internal_retrieval.py  test_libraries_api.py  test_library_models.py  test_mcp_tools.py  test_metadata_scout.py  test_migration_backfill.py  test_migrations.py  test_persist.py  test_persist_contributor_guard.py  (+19 more)
test/live/: test_firebase_live.py
test/unit/: test_agent_runtime.py  test_agent_schemas.py  test_agent_services.py  test_analysis_style.py  test_api_history.py  test_api_import_commit.py  test_api_import_preview.py  test_api_import_routes_wired.py  test_api_requires_auth.py  test_api_works.py  test_auth_offloop.py  test_availability_batch.py  test_availability_directory.py  test_availability_links.py  test_availability_overdrive.py  test_availability_service.py  test_backend_dispatch.py  test_backend_scaffold.py  test_backends.py  test_chat_enrich_reroute.py  test_chat_recorder.py  test_chat_rehydrate.py  test_chat_stream.py  test_check_availability_guard.py  test_claude_backend.py  test_claude_tools.py  test_clean_catalog_cli.py  test_clean_catalog_merge_works_apply_cli.py  test_clean_catalog_merge_works_cli.py  test_clean_catalog_promote_pair_cli.py  test_clean_catalog_prune_cli.py  test_clean_catalog_repair_fallbacks_cli.py  test_cleaning.py  test_cli.py  test_contributor_dedup.py  test_curate_candidates.py  test_db_models.py  test_db_pool_consolidation.py  test_db_session_url.py  test_dedup_apply_gate.py  (+56 more)
(+184 files in other folders)
