[project]
name = "agentic-librarian"
version = "0.1.0"
description = "An agentic book recommender system"
requires-python = ">=3.11"
dependencies = [
    # Core ML and Data Science packages
    "mlflow>=3.0,<4.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    # Data versioning
    "dvc>1.2.30",
    # PyTorch
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # API and Web packages
    "requests>=2.31.0",
    "google-api-python-client>=2.111.0",
    "firecrawl-py>=0.0.16",
    "google-cloud-aiplatform>=1.128.0",
    "beautifulsoup4",
    "dotenv",
    # LLM packages
    "openai>=1.3.0",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.2",
    "google-genai>=1.53.0",
    "mcp",
    "fastmcp",
    "google-adk",
    "a2a-sdk",
    # Orchestration
    "dagster",
    "dagster-webserver",
    # Testing
    "pytest",
    "pytest-cov",
    # Database dependencies
    "sqlalchemy>=2.0.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_librarian"]

[tool.ruff]
# Same line length as flake8 and pylint
line-length = 120

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

# Target Python 3.11+
target-version = "py311"

[tool.ruff.lint]
# Enable flake8 rules similar to the current configuration
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore rules similar to flake8 config
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':'
]

# Allow complexity similar to flake8
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
# Use double quotes for strings (default)
quote-style = "double"

# Use Unix-style line endings
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = [
    "test"
]
python_files = [
    "test_*.py"
]
markers = [
    "api_dependent: tests that require an external API key and should be skipped in pre-commit",
    "slow: tests that are slow to run and should be skipped for fast feedback loops",
    "integration: tests that verify components of the system integrated",
]
