[project]
name = "agentic-librarian"
version = "0.1.0"
description = "An agentic book recommender system"
requires-python = ">=3.11"
dependencies = [
    # Core ML and Data Science packages
    "mlflow>=3.8.1,<4.0",
    "pandas>=2.3.3",
    # Data versioning
    "dvc>=3.66.1",
    # API and Web packages
    "requests>=2.32.5",
    "google-api-python-client>=2.188.0",
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.1",
    # LLM packages
    # google-adk 2.1.0 is the latest stable and supports output_schema+tools together
    # (since 1.26.0) and grounding-citation metadata (since 1.27.0) — see ADR-037. Floor
    # set to 2.1.0 so a fresh resolve can't drop below those capabilities; google-genai
    # floor matches ADK 2.1.0's own constraint (>=1.72).
    "google-genai>=1.72",
    "mcp>=1.26.0",
    "fastmcp>=2.14.5",
    "google-adk>=2.1.0",
    "a2a-sdk>=0.3.22",
    # Orchestration
    "dagster>=1.12.12",
    "dagster-webserver>=1.12.12",
    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    # Database dependencies
    "sqlalchemy>=2.0.46",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    # API surface (Lift 0 walking skeleton — served by uvicorn in the prod image)
    "fastapi>=0.115",
    "uvicorn>=0.34",
    # Schema migrations (Lift 1, ADR-048) — env.py reuses the app's URL resolution
    "alembic>=1.13",
    # Firebase Auth verification (Lift 1, ADR-048) — ADC on Cloud Run, offline JWT checks
    "firebase-admin>=6.5"
]

[project.scripts]
librarian = "agentic_librarian.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "httpx>=0.27",
    "openai>=2.16.0",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "scikit-learn>=1.8.0",
    "google-cloud-aiplatform>=1.135.0",
]
# Optional: Anthropic Claude Agent SDK (python wrapper around the `claude` CLI).
# Install with:  pip install -e ".[claude]"
# The `claude` CLI binary (npm install -g @anthropic-ai/claude-code) must also be
# present and authenticated (one-time `claude` login) for api_dependent e2e tests.
claude = [
    "claude-agent-sdk>=0.2.87",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_librarian"]

[tool.ruff]
# Same line length as flake8 and pylint
line-length = 120

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

# Target Python 3.11+
target-version = "py311"

[tool.ruff.lint]
# Enable flake8 rules similar to the current configuration
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore rules similar to flake8 config
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':'
]

# Allow complexity similar to flake8
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
# Use double quotes for strings (default)
quote-style = "double"

# Use Unix-style line endings
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = [
    "test"
]
# Make the src/ layout importable for tests regardless of editable-install state.
pythonpath = [
    "src"
]
python_files = [
    "test_*.py"
]
markers = [
    "api_dependent: tests that require an external API key and should be skipped in pre-commit",
    "slow: tests that are slow to run and should be skipped for fast feedback loops",
    "integration: tests that verify components of the system integrated",
    "live: tests against real external services (operator-run, never CI)",
]
